# epi-downloader

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  pyinstaller.yml
