[tool.poetry]
name = "EPI downloader"
version = "0.2.0"
description = "A tool for downloading data from the Epi Visualisation website."
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
httpx = "^0.25.0"
asyncio = "^3.4.3"
platformdirs = "^4.1.0"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"

[tool.mypy]
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
